--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "storynest": "file:",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
